# Ion

./: readme.md
ion/: CMakeLists.txt  CMakePresets.json  Main.cpp  Main.hpp  my_c_functions.h
ion.v2/: CMakeLists.txt  Ion.cpp  Main.cpp
ion.v2/core/: CMakeLists.txt  CoreManager.cpp  CoreManager.hpp
ion.v2/core/antivm/: CMakeLists.txt
ion.v2/core/antivm/networkCheck/: CMakeLists.txt  check_network.cpp  check_network.hpp
ion.v2/core/debug/: CMakeLists.txt  Logger.cpp  Logger.hpp
ion.v2/core/debug/Logger/: Logger.cpp  Logger.hpp
ion.v2/core/resources/: CMakeLists.txt  obfuscate.hpp
ion.v2/core/systeminfo/: CMakeLists.txt
ion.v2/core/systeminfo/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp
ion.v2/core/systeminfo/location/: CMakeLists.txt  getLocation.cpp  getLocation.hpp
ion.v2/core/systeminfo/os_ver/: CMakeLists.txt  version.cpp  version.hpp
ion.v2/core/systeminfo/timezone/: CMakeLists.txt  getTimezone.cpp  getTimezone.hpp
ion.v2/core/systeminfo/username/: CMakeLists.txt  OS_Username.cpp  OS_Username.hpp
ion.v2/modules/: CMakeLists.txt  ModulesManager.cpp  ModulesManager.hpp
ion.v2/modules/GetPID/: CMakeLists.txt  GetPid.cpp  GetPid.hpp
ion.v2/modules/KillProcess/: CMakeLists.txt  StopByName.cpp  StopByName.hpp
ion.v2/modules/KillProcess/ByName/: CMakeLists.txt  StopByName.cpp  StopByName.hpp
ion.v2/modules/KillProcess/ByPID/: CMakeLists.txt  StopByProcID.cpp  StopByProcID.hpp
ion.v2/modules/PID/: CMakeLists.txt  pid.cpp  pid.hpp
ion.v2/modules/StartProcess/: CMakeLists.txt  calc.cpp  calc.hpp
ion.v2/modules/StartProcess/beamng/: CMakeLists.txt  beamng.cpp  beamng.hpp
ion.v2/modules/StartProcess/calc/: calc.cpp  calc.hpp
ion.v2/modules/StartProcess/cmd/: CMakeLists.txt  cmd.cpp  cmd.hpp
ion.v2/modules/StartProcess/notepad/: CMakeLists.txt  notepad.cpp  notepad.hpp
ion.v2/modules/StartProcess/powershell/: CMakeLists.txt  powershell.cpp  powershell.hpp
ion/core/: Module.cpp  Module.hpp  core.hpp
ion/core/info/: CMakeLists.txt  osUsername.cpp  osUsername.hpp
ion/modules/: CMakeLists.txt  Manager.cpp  Manager.hpp  Ping.cpp  Ping.hpp  checkArpTable.cpp  checkArpTable.hpp  checkExclusions.cpp
ion/modules/checks/: CMakeLists.txt  checkRegStartup.cpp  checkRegStartup.hpp  checkStartup.cpp  checkStartup.hpp
ion/modules/checks/environment/: CMakeLists.txt  checkEnvVariables.cpp  checkEnvVariables.hpp
ion/modules/checks/network/: CMakeLists.txt  checkArpTable.cpp  checkArpTable.hpp
ion/modules/checks/startup/: CMakeLists.txt  checkRegStartup.cpp  checkRegStartup.hpp  checkStartup.cpp  checkStartup.hpp  checkTaskScheduler.cpp  checkTaskScheduler.hpp
ion/modules/checks/windows_defender/: CMakeLists.txt  checkExclusions.cpp  checkExclusions.hpp
ion/modules/powershell/: CMakeLists.txt  GetProcess.cpp  GetProcess.hpp  KillProcess.cpp  KillProcess.hpp  TaskList.cpp  TaskList.hpp
ion/modules/removals/: CMakeLists.txt  removeExclusion.cpp  removeExclusion.hpp
